--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,39 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="warning">
     <ion-title>
-      Tab 2
+      Séries
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>17 de Dezembro de 1989</ion-card-subtitle>
+      <ion-card-title>Os Simpsons</ion-card-title>
+    </ion-card-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+    <ion-card-content>
+    <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/9fSGtPOp3MlFfynLEjYjlOfenbk.jpg">
+    </ion-card-content>
+    <p>A família Simpsons mora na cidade de Springfield, uma cidade americana como qualquer outra. Homer trabalha como inspetor de segurança numa usina de energia nuclear.…</p>
+    <ion-button expand="block" fill="outline">Mais-Informações...</ion-button>
+
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>02 de Dezembro de 2013</ion-card-subtitle>
+      <ion-card-title>Rick and Morty</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+    <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/qJdfO3ahgAMf2rcmhoqngjBBZW1.jpg">
+    </ion-card-content>
+    <p>O brilhante cientista beberrão Rick sequestra Morty, seu neto aborrescente, para viver loucuras em outros mundos e dimensões alternativas.</p>
+    <ion-button expand="block" fill="outline">Mais-Informações...</ion-button>
+
+  </ion-card>
+
 </ion-content>
